Fix z-index (#181)
Poke list seems to be the only relevant component.

--- a/app/client/styles/components/_poke.scss
+++ b/app/client/styles/components/_poke.scss
@@ -14,6 +14,7 @@
     padding: 10px 15px;
     max-height: 80%;
     overflow-y: auto;
+    z-index: 5;
 
     .poke-header {
         font-size: smaller;
